<resources>
    <string name="app_name">AssignmentApp</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="desc_vk_login">VK social media button</string>
    <string name="desc_ok_login">OK social media button</string>
    <string name="simulate_login_time">Simulating login time</string>
    <string name="account">Account</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="search_courses">Search courses</string>
</resources>